변수명 수정

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="game"></div>
+    <div id="game-div"></div>
     <script src="js/constants.js"></script>
     <script src="js/util.js"></script>
     <script src="js/main.js"></script>
